Compilers/OperacoesBooleanas/Booleano.jj
PARSER_BEGIN(Booleano)

public class Booleano{
	public static void main(String args[]) throws ParseException{
		Booleano Bool = new Booleano(System.in);
		Bool.Inicio();
	}
}

PARSER_END(Booleano)

SKIP: {" " | "\n" | "\t"}


TOKEN: {

	<CONST: "1" | "V" | "v" | "VERDADEIRO" | "verdadeiro" | "0" | "F" 
			| "f" | "FALSO" | "falso">
		{
		System.out.println("Booleano: "+image);
		}
	|
	<AP: "(">
		{
		System.out.println("Parenteses: "+image);
		}
	|
	<FP: ")">
		{
		System.out.println("Parenteses: "+image);
		}
	|
	<SINAL: "."|"+">
		{
		System.out.println("Sinal: "+image);
		}

}

// Regras de Produção

void Inicio():{}
{
	Expressao()	<EOF>
}

void Expressao():{}
{
	Termo()(<SINAL>Termo())*
}

void Termo():{}
{
	<AP>Expressao()<FP> | <CONST>
}
